package SystemPackage;

public class gameSaver extends SystemManager{
    
    public void save()
    {
        
        System.out.println("save");
    }

    public void create()
    {
        System.out.println("Create");   
    }
}
